# WeatherApp

./: .dockerignore  .gitignore  Dockerfile  Dockerrun.aws.json  README.md  main.py  options.json  pyproject.toml
.elasticbeanstalk/: 01-use-launch-template.config  config.yml
.github/scripts/: create-or-update-environment.sh  generate-dockerrun-aws-json.sh
.github/workflows/: build-and-deploy.yml  environment-cleanup.yml  python-ci.yml  sample-env.yml
tests/: test_weather_app.py
weather_app/: weather.py
